--- a/www/locales/es/translation.json
+++ b/www/locales/es/translation.json
@@ -44,5 +44,8 @@
 
 	  "language-english": "Inglés",
 	  "language-spanish": "Español"
+	},
+	"result-list": {
+		"title": "Resultados {VENUE_CATEGORY}"
 	}
 }
