--- a/www/locales/es/translation.json
+++ b/www/locales/es/translation.json
@@ -46,6 +46,6 @@
 	  "language-spanish": "Español"
 	},
 	"result-list": {
-		"title": "Resultados {VENUE_CATEGORY}"
+		"title": "Resultados"
 	}
 }
